--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -17,7 +17,7 @@
                 font-size: 27px
                 vertical-align: middle
 
-        &-h1
+        &-main
             margin-top: 23px
             color: #222
             font-weight: 400
