--- a/figma/ZEN/sass/sectionZEN-Cashbask.sass
+++ b/figma/ZEN/sass/sectionZEN-Cashbask.sass
@@ -13,6 +13,7 @@
         color: #222
         width: 584px
         font-size: 18px
+        line-height: 26px
         text-align: center
         margin: 0 auto
         padding-bottom: 58px
