--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -21,9 +21,10 @@ html
         &-h1
             font-weight: 500
             font-size: 36px
-            line-height: 34px
+            line-height: 42px
             transition: 0.5s
             font-family: Nunito
+            width: 377px
 
         &-text
             padding: 22px 0
@@ -32,6 +33,10 @@ html
             font-size: 18px
             transition: 0.5s
             line-height: 25px
+            font-family: Nunito
+
+            p
+                margin-top: 10px
 
 .ZEN-section__img
     img
