--- a/figma/ZEN/sass/section4.sass
+++ b/figma/ZEN/sass/section4.sass
@@ -1,3 +1,8 @@
+.ZEN-section__common-text-h1-long
+    width: 470px
+    i
+        font-size: 27px
+
 .sectionZEN-text-button
     display: flex
     width: 200px
