--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -76,11 +76,7 @@
             margin: 0 auto
             padding: 10% 0
             padding: 9px
-
-            &-1
-                text-align: center
-            &-2
-                text-align: center
+            text-align: center
 
         &-textUnder
             width: 100%
@@ -117,16 +113,12 @@
             height: 100%
             padding: 8px
 
-        &-h1
+        &-main
             display: block
             margin: 0 auto
             padding: 10% 0
             padding: 9px
-
-            &-1
-                text-align: center
-            &-2
-                text-align: center
+            text-align: center
 
         &-textUnder
             width: 100%
