--- a/figma/ZEN/sass/footer.sass
+++ b/figma/ZEN/sass/footer.sass
@@ -89,6 +89,10 @@
     border-top: 1px solid rgba(151, 151, 151, 0.2)
     margin-top: 68px
 
+@media ( max-width: 1050px )
+    .footerZEN-menu
+        justify-content: space-around
+
 @media ( max-width: 900px )
     .footerZEN-menu
         padding: 20px
