--- a/figma/ZEN/sass/headerNew.sass
+++ b/figma/ZEN/sass/headerNew.sass
@@ -127,6 +127,9 @@ body.lockZEN
     justify-content: space-between
     width: 70%
 
+.header-line
+    border-top: 1px solid rgba(151, 151, 151, 0.2)
+
 @media (min-width: 1080px)
     .ZEN-header__list
         display: flex
