--- a/figma/SOS/sass/headerSOS.sass
+++ b/figma/SOS/sass/headerSOS.sass
@@ -84,6 +84,7 @@ body.lockSOS
             text-transform: uppercase
             transition: 0.2s
             font-weight: 700
+            font-family: Open Sans
 
             &:hover
                 color: red
@@ -278,3 +279,5 @@ body.lockSOS
         margin-top: 12px
         &-text
             margin-top: 8px
+
+
