--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -7,7 +7,7 @@
     background-size: contain
     position: relative
 
-.s4-h1up-text
+.s4-h1up
     display: block
     text-align: center
     color: white
@@ -18,13 +18,13 @@
     letter-spacing: 3px
     font-family: Bebas Neue
 
-.s4-h1main-text
+.s4-h1main
     display: block
     text-align: center
     color: white
     text-transform: uppercase
     padding-top: 20px
-    font-size: 60px
+    font-size: 80px
     font-family: Bebas Neue
     line-height: 45px
     letter-spacing: 4px
@@ -49,9 +49,12 @@
     &-name
         color: #FFB548
         text-transform: uppercase
-        font-weight: 700
+        font-weight: 500
         margin-top: 10px
         margin-left: 20px
+        font-size: 24px
+        font-family: Bebas Neue
+        letter-spacing: 2px
 
     &-text
         color: white
