--- a/css/style.css
+++ b/css/style.css
@@ -636,6 +636,10 @@ img {
   font-family: Bebas Neue;
   src: url(../figma/SOS/webfonts/BebasNeue-Regular.ttf);
 }
+@font-face {
+  font-family: Bebas Neue;
+  src: url(../figma/SOS/webfonts/OpenSans.ttf);
+}
 .SectionThree {
   display: flex;
   justify-content: center;
@@ -654,7 +658,7 @@ img {
 }
 
 .SOS-S3-wrapper {
-  margin: 15% 20% 0 0;
+  margin: 15% 22% 0 0;
 }
 
 .S3-h1up-text {
@@ -933,7 +937,7 @@ img {
   position: relative;
 }
 
-.s4-h1up-text {
+.s4-h1up {
   display: block;
   text-align: center;
   color: white;
@@ -945,13 +949,13 @@ img {
   font-family: Bebas Neue;
 }
 
-.s4-h1main-text {
+.s4-h1main {
   display: block;
   text-align: center;
   color: white;
   text-transform: uppercase;
   padding-top: 20px;
-  font-size: 60px;
+  font-size: 80px;
   font-family: Bebas Neue;
   line-height: 45px;
   letter-spacing: 4px;
@@ -979,9 +983,12 @@ img {
 .table-name {
   color: #FFB548;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   margin-top: 10px;
   margin-left: 20px;
+  font-size: 24px;
+  font-family: Bebas Neue;
+  letter-spacing: 2px;
 }
 .table-text {
   color: white;
@@ -1251,12 +1258,12 @@ img {
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
-  width: 90%;
+  width: 650px;
   flex-wrap: wrap;
 }
 
 .email {
-  width: 600px;
+  width: 366px;
   height: 60px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 5px;
@@ -1288,7 +1295,7 @@ img {
 
 .ButtonSubscribe {
   width: 260px;
-  height: 60px;
+  height: 60px !important;
   background: linear-gradient(#FFB548, #F3AF34);
   border-radius: 4px;
   font-size: 16px;
@@ -1299,7 +1306,7 @@ img {
   color: black;
   font-size: 16px;
   text-align: center;
-  line-height: 48px;
+  line-height: 58px;
   cursor: pointer;
   font-weight: 700;
   font-family: Open Sans;
@@ -1448,20 +1455,22 @@ img {
 .s5h1-up {
   margin-top: 304px;
   color: white;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 24px;
   line-height: 24px;
   letter-spacing: 2px;
   text-transform: uppercase;
+  font-family: Bebas Neue;
 }
 
 .s5h1-main {
   margin-top: 20px;
   color: white;
-  font-weight: 700;
+  font-weight: 500;
   text-transform: uppercase;
   font-size: 80px;
   line-height: 80px;
+  font-family: Bebas Neue;
   letter-spacing: 3px;
 }
 
@@ -1550,6 +1559,7 @@ img {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 24px;
+  font-family: Bebas Neue;
   line-height: 24px;
   left: 109px;
   top: 26px;
@@ -1560,6 +1570,9 @@ img {
   top: 47px;
   left: 109px;
   color: #5d5d5e;
+  font-family: Open Sans;
+  font-weight: 400;
+  font-size: 18px;
 }
 .reviewsSOS-img {
   position: absolute;
@@ -1594,11 +1607,16 @@ img {
   color: white;
   width: 390px;
   height: 60px;
+  font-family: Open Sans;
+  font-weight: 400;
+  font-size: 18px;
 }
 .reviewsSOS-date {
   margin-left: 16px;
   margin-top: 151px;
   color: #5d5d5e;
+  font-size: 14px;
+  line-height: 20px;
 }
 
 .reviewsSOS .fa-twitter::before {
@@ -1693,9 +1711,11 @@ img {
 }
 .SectionTwo .h1up {
   margin-top: 250px;
+  padding-bottom: 10px;
   color: white;
   text-transform: uppercase;
   font-size: 24px;
+  letter-spacing: 2px;
   font-family: Bebas Neue;
 }
 .SectionTwo .h1Main {
@@ -1747,6 +1767,7 @@ img {
 .slider__photo img {
   height: 100%;
   width: 100%;
+  border-radius: 6px;
 }
 .slider__photo_1 {
   position: absolute;
@@ -1777,9 +1798,9 @@ img {
 
 .slider__photo_2 {
   position: absolute;
-  top: 30px;
+  top: 20px;
   left: 70px;
-  height: 460px;
+  height: 470px;
   width: 410px;
   z-index: 1;
 }
@@ -3142,6 +3163,7 @@ body.lockSOS {
   text-transform: uppercase;
   transition: 0.2s;
   font-weight: 700;
+  font-family: Open Sans;
 }
 .menu-listSOS li a:hover {
   color: red;
