--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -16,19 +16,21 @@
 .s5h1-up
     margin-top: 304px
     color: white
-    font-weight: 700
+    font-weight: 500
     font-size: 24px
     line-height: 24px
     letter-spacing: 2px
     text-transform: uppercase
+    font-family: Bebas Neue
 
 .s5h1-main
     margin-top: 20px
     color: white
-    font-weight: 700
+    font-weight: 500
     text-transform: uppercase
     font-size: 80px
     line-height: 80px
+    font-family: Bebas Neue
     letter-spacing: 3px
 
 .s5h1-text
@@ -110,6 +112,7 @@
         text-transform: uppercase
         font-weight: 700
         font-size: 24px
+        font-family: Bebas Neue
         line-height: 24px
         left: 109px
         top: 26px
@@ -120,6 +123,9 @@
         top: 47px
         left: 109px
         color: #5d5d5e
+        font-family: Open Sans
+        font-weight: 400
+        font-size: 18px
 
     &-img
         position: absolute
@@ -153,11 +159,16 @@
         color: white
         width: 390px
         height: 60px
+        font-family: Open Sans
+        font-weight: 400
+        font-size: 18px
 
     &-date
         margin-left: 16px
         margin-top: 151px
         color: #5d5d5e
+        font-size: 14px
+        line-height: 20px
 
 .reviewsSOS .fa-twitter::before
     font-size: 17px
