--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -227,3 +227,7 @@
 @font-face
     font-family: Bebas Neue
     src: url(../figma/SOS/webfonts/BebasNeue-Regular.ttf)
+
+@font-face
+    font-family: Bebas Neue
+    src: url(../figma/SOS/webfonts/OpenSans.ttf)
