--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -60,11 +60,11 @@
     display: flex
     justify-content: space-between
     margin-top: 30px
-    width: 90%
+    width: 650px
     flex-wrap: wrap
 
 .email
-    width: 600px
+    width: 366px
     height: 60px
     background: rgba(255, 255, 255, 0.1)
     border-radius: 5px
@@ -97,7 +97,7 @@
 
 .ButtonSubscribe
     width: 260px
-    height: 60px
+    height: 60px !important
     background: linear-gradient(#FFB548, #F3AF34)
     border-radius: 4px
     font-size: 16px
@@ -108,7 +108,7 @@
     color: black
     font-size: 16px
     text-align: center
-    line-height: 48px
+    line-height: 58px
     cursor: pointer
     font-weight: 700
     font-family: Open Sans
