--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -11,10 +11,11 @@
 
     .h1up
         margin-top: 250px
-
+        padding-bottom: 10px
         color: white
         text-transform: uppercase
         font-size: 24px
+        letter-spacing: 2px
         font-family: Bebas Neue
 
     .h1Main
@@ -64,6 +65,7 @@
     &__photo img
         height: 100%
         width: 100%
+        border-radius: 6px
 
     &__photo_1
         position: absolute
@@ -92,9 +94,9 @@
 
 .slider__photo_2
     position: absolute
-    top: 30px
+    top: 20px
     left: 70px
-    height: 460px
+    height: 470px
     width: 410px
     z-index: 1
 
