--- a/css/style.css
+++ b/css/style.css
@@ -1208,12 +1208,11 @@ img {
 
 .SOS-S6-inner {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 0 auto;
 }
 
 .SOS-s6-right {
-  width: 65%;
   height: 70%;
 }
 
