--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -15,11 +15,10 @@
 
 .SOS-S6-inner
     display: flex
-    justify-content: space-between
+    justify-content: space-around
     margin: 0 auto
 
 .SOS-s6-right
-    width: 65%
     height: 70%
 
 .s6h1-up
