--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -147,26 +147,21 @@
     top: 239px
     left: 532px
 
-@media (max-width: 700px)
-    .s4-h1up-text
-        font-size: 16px
-
-    .s4-h1main-text
-        font-size: 40px
-
-@media (max-width: 330px)
-    .s4-h1main-text
-        font-size: 30px
-        line-height: 30px
-
 @media (max-width: 850px)
     .TableSOS-wrapper
         width: 100%
         display: flex
         justify-content: center
 
+@media (max-width: 700px)
+    .s4-h1up
+        font-size: 16px
+
+    .s4-h1main
+        font-size: 40px
+
 @media (max-width: 560px)
-    .s4-h1up-text
+    .s4-h1up
         padding-top: 40px
 
     .TableSOS-inner
@@ -223,3 +218,8 @@
 
     .line7
         display: none
+
+@media (max-width: 330px)
+    .s4-h1main
+        font-size: 30px
+        line-height: 30px
