--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -168,14 +168,12 @@
         margin-left: 20px
 
     .SOS-S3-container
-        justify-content: flex-start
+        justify-content: center
 
         .SOS-S3-wrapper
             padding: 10px
 
 @media (max-width: 700px)
-    .SOS-S3-wrapper
-        width: 100%
 
     .S3-h1up-text
         width: 100%
