--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -114,9 +114,9 @@
     top: 231px
     cursor: pointer
 
-@media ( min-width:  1700px)
-    .textSectionTwo
-        margin: 50px 0 0 270px !important
+@media (max-width: 1370px)
+    .about-game__wrapper
+        width: 90%
 
 @media (max-width: 1275px)
     .SectionTwo
@@ -150,6 +150,7 @@
 
             .textSectionTwo
                 margin: 0 auto
+                padding: 25px
 
         .slider
             margin: 0 auto
