--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -222,6 +222,7 @@
     .s5h1-main
         font-size: 50px
         line-height: 55px
+        color: rgba(255, 181, 72, 0.9) !important
 
     .s5h1-text
         width: 90%
