--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -111,6 +111,7 @@
     cursor: pointer
     font-weight: 700
     font-family: Open Sans
+    transition: 0.5s
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
