--- a/css/style.css
+++ b/css/style.css
@@ -661,7 +661,7 @@ img {
   margin: 15% 22% 0 0;
 }
 
-.S3-h1up-text {
+.S3-h1up {
   color: white;
   text-transform: uppercase;
   font-family: Bebas Neue;
@@ -671,7 +671,7 @@ img {
   letter-spacing: 2px;
 }
 
-.S3-h1main-text {
+.S3-h1main {
   margin-top: 30px;
   color: white;
   text-transform: uppercase;
@@ -814,12 +814,17 @@ img {
     min-height: 100%;
   }
 
-  .S3-h1up-text {
-    margin-left: 20px;
+  .SOS-S3-wrapper {
+    margin: 0;
+    margin-top: 70px;
+  }
+
+  .S3-h1up {
+    text-align: center;
   }
 
   .S3-h1main {
-    margin-left: 20px;
+    text-align: center;
   }
 
   .SOS-S3-container {
@@ -830,7 +835,7 @@ img {
   }
 }
 @media (max-width: 700px) {
-  .S3-h1up-text {
+  .S3-h1up {
     width: 100%;
     text-align: center;
   }
@@ -853,12 +858,12 @@ img {
   }
 }
 @media (max-width: 620px) {
-  .S3-h1main-text {
+  .S3-h1main {
     font-size: 70px;
   }
 }
 @media (max-width: 580px) {
-  .S3-h1up-text {
+  .S3-h1up {
     margin-left: 0;
   }
 
