--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -16,7 +16,7 @@
 .SOS-S3-wrapper
     margin: 15% 22% 0 0
 
-.S3-h1up-text
+.S3-h1up
     color: white
     text-transform: uppercase
     font-family: Bebas Neue
@@ -25,7 +25,7 @@
     line-height: 24px
     letter-spacing: 2px
 
-.S3-h1main-text
+.S3-h1main
     margin-top: 30px
     color: white
     text-transform: uppercase
@@ -161,11 +161,15 @@
         min-width: 100%
         min-height: 100%
 
-    .S3-h1up-text
-        margin-left: 20px
+    .SOS-S3-wrapper
+        margin: 0
+        margin-top: 70px
+
+    .S3-h1up
+        text-align: center
 
     .S3-h1main
-        margin-left: 20px
+        text-align: center
 
     .SOS-S3-container
         justify-content: center
@@ -175,7 +179,7 @@
 
 @media (max-width: 700px)
 
-    .S3-h1up-text
+    .S3-h1up
         width: 100%
         text-align: center
 
@@ -193,11 +197,11 @@
         font-size: 30px !important
 
 @media (max-width: 620px)
-    .S3-h1main-text
+    .S3-h1main
         font-size: 70px
 
 @media (max-width: 580px)
-    .S3-h1up-text
+    .S3-h1up
         margin-left: 0
 
     .s3h1
