--- a/css/style.css
+++ b/css/style.css
@@ -1100,16 +1100,21 @@ img {
 }
 @media (max-width: 700px) {
   .s4-h1up {
-    font-size: 16px;
+    font-size: 24px;
+    padding: 0 10px;
   }
 
   .s4-h1main {
-    font-size: 40px;
+    font-size: 45px;
   }
 }
 @media (max-width: 560px) {
   .s4-h1up {
     padding-top: 40px;
+  }
+
+  .s4-h1main {
+    color: rgba(255, 181, 72, 0.9) !important;
   }
 
   .TableSOS-inner {
@@ -1393,8 +1398,9 @@ img {
   }
 
   .s6h1-up {
+    margin-top: 150px;
     display: block;
-    font-size: 18px;
+    font-size: 24px;
     width: 100%;
     text-align: center;
     padding: 7px;
@@ -1402,11 +1408,12 @@ img {
 
   .s6h1-main {
     display: block;
-    font-size: 30px;
+    font-size: 45px;
     width: 100%;
-    line-height: 30px;
+    line-height: 50px;
     text-align: center;
     padding: 7px;
+    color: rgba(255, 181, 72, 0.9);
   }
 
   .s6h1-text {
