--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -155,14 +155,18 @@
 
 @media (max-width: 700px)
     .s4-h1up
-        font-size: 16px
+        font-size: 24px
+        padding: 0 10px
 
     .s4-h1main
-        font-size: 40px
+        font-size: 45px
 
 @media (max-width: 560px)
     .s4-h1up
         padding-top: 40px
+
+    .s4-h1main
+        color: rgba(255, 181, 72, 0.9) !important
 
     .TableSOS-inner
         margin-top: 40px
