--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -182,19 +182,21 @@
         flex-direction: column
 
     .s6h1-up
+        margin-top: 150px
         display: block
-        font-size: 18px
+        font-size: 24px
         width: 100%
         text-align: center
         padding: 7px
 
     .s6h1-main
         display: block
-        font-size: 30px
+        font-size: 45px
         width: 100%
-        line-height: 30px
+        line-height: 50px
         text-align: center
         padding: 7px
+        color: rgba(255, 181, 72, 0.9)
 
     .s6h1-text
         display: block
