--- a/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
+++ b/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
@@ -6,14 +6,12 @@
     overflow: hidden
     background: black
     color: white
-    height: 90vh
     position: relative
-    padding-left: 10px
-    width: 50vh
 
 .status
     display: flex
     justify-content: start
+    padding-left: 7px
 
 .signal
     margin-right: 1vh
@@ -44,7 +42,7 @@
     padding: 5px 0px
 
 .value
-    font-size: 130px
+    font-size: 90px
     font-weight: 300
     height: 70px
     margin-bottom: 20px
@@ -52,99 +50,68 @@
     text-align: right
 
 .CalcButtons-container
-    display: grid
-    grid-gap: 20px
-    grid-template-columns: repeat(4, 1fr)
-    grid-template-rows: repeat(5, 1fr)
-
-.CalcButton
-    align-items: center
-    background: #333
-    border-radius: 50%
-    cursor: pointer
-    display: flex
-    font-size: 36px
-    height: 75px
-    justify-content: center
-    transition: filter .3s
-    width: 75px
-
-    &.function
-        color: black
-        background: #a5a5a5
-
-        &.ac
-            font-size: 28px
-
-        &.percent
-            font-size: 28px
-
-    &.operator
-        background: #f1a33c
-
-    &.number-0
-        border-radius: 55px
-        grid-column: 1 / span 2
-        justify-content: flex-start
-        padding-left: 43px
-        width: 210px
-
-    &:active,
-
-    &:focus
-        filter: brightness(133%)
-
-@media (max-width: 641px)
-    .calculator-on-iPhone-JS
-        height: 100%
-        width: 100%
-
-@media (max-width: 520px)
-    .calculator-on-iPhone-JS
-        overflow: hidden
-
-    .fancybox-slide
-        max-height: 640px
-        overflow: hidden
-
-    .top-bar
-
-        .CalcButton.number-0
-            width: 172px
+    display: block
+    padding: 0 25px
+    span
+        display: flex
+        justify-content: space-between
+        margin: 20px 0
 
         .CalcButton
-            font-size: 30px
+            align-items: center
+            background: #333
+            border-radius: 50%
+            cursor: pointer
+            display: flex
+            font-size: 44px
+            height: 80px
+            justify-content: center
+            transition: filter .3s
+            width: 80px
 
-    .value
-        margin-top: 20px
-        font-size: 80px !important
+            &.function
+                color: black
+                background: #a5a5a5
 
-@media (max-width: 470px)
-    .fancybox-slide
-        max-height: 540px
-        overflow: hidden
+                &.ac
+                    font-size: 28px
 
-@media (max-width: 450px)
+                &.percent
+                    font-size: 28px
 
-    .calculator-on-iPhone-JS
+            &.operator
+                background: #f1a33c
 
-        .top-bar
-            height: 40px
+            &.number-0
+                border-radius: 55px
+                justify-content: flex-start
+                padding-left: 35px
+                width: 210px
 
-            .value
-                font-size: 40px
+            &:active,
+
+            &:focus
+                filter: brightness(133%)
+
+@media (max-width: 465px)
 
     .CalcButtons-container
-        padding: 0 10px
-        grid-gap: 10px
+        display: block
+        padding: 0 15px
 
-        .CalcButton
-            width: auto
+        span
+            margin: 15px 0
 
-@media (max-width: 390px)
-    .CalcButton
-        font-size: 24px
+            .CalcButton
+                font-size: 36px
+                height: 70px
+                width: 70px
 
+                &.number-0
+                    width: 170px
+                    padding-left: 33px
+
+@media (max-width: 400px)
     .top-bar
         .status
             .signal
@@ -159,7 +126,6 @@
 
         .clock
             font-size: 12px
-
         .battery
             &-text
                 font-size: 12px
@@ -170,6 +136,158 @@
                     height: 42px
                     padding-bottom: 21px
 
-@media (max-width: 380px)
-    .CalcButton
-        height: 55px
+    .CalcButtons-container
+        display: block
+        padding: 0 10px
+
+        span
+            margin: 15px 0
+
+            .CalcButton
+                font-size: 30px
+                height: 60px
+                width: 60px
+
+                &.number-0
+                    width: 150px
+                    padding-left: 30px
+
+@media (max-width: 350px)
+    .top-bar
+        height: 80px
+
+    .value
+        font-size: 70px
+
+    .CalcButtons-container
+        display: block
+        padding: 0 10px
+
+        span
+            margin: 15px 0
+
+            .CalcButton
+                font-size: 25px
+                height: 55px
+                width: 55px
+
+                &.number-0
+                    width: 130px
+                    padding-left: 24px
+
+                &.function
+                    &.ac
+                        font-size: 20px
+
+@media (max-width: 300px)
+    .top-bar
+        height: 70px
+
+    .value
+        font-size: 50px
+        height: auto
+
+    .CalcButtons-container
+        display: block
+        padding: 0 10px
+
+        span
+            margin: 15px 0
+
+            .CalcButton
+                font-size: 24px
+                height: 48px
+                width: 48px
+
+                &.number-0
+                    width: 100px
+                    padding-left: 18px
+
+//     @media (max-width: 641px)
+//     .calculator-on-iPhone-JS
+//         height: 100%
+//         width: 100%
+
+// @media (max-width: 530px)
+//     .calculator-on-iPhone-JS
+//         overflow: hidden
+
+//     .fancybox-slide
+//         height: 680px
+//         overflow: hidden
+
+//     .CalcButton.number-0
+//         width: 172px
+
+//     .CalcButton
+//         font-size: 30px
+
+//     .value
+//         margin-top: 20px
+//         font-size: 50px !important
+
+//     .CalcButton
+//         width: 70px
+//         height: 70px
+//         font-size: 50px
+
+// @media (max-width: 500px)
+//     .CalcButton
+//         height: 70px
+//         width: 70px
+//         font-size: 30px
+
+// @media (max-width: 470px)
+//     .fancybox-slide
+//         max-height: 640px
+//         overflow: hidden
+
+// @media (max-width: 450px)
+
+//     .calculator-on-iPhone-JS
+
+//         .top-bar
+//             height: 40px
+
+//             .value
+//                 font-size: 40px
+
+// @media (max-width: 390px)
+//     .CalcButton
+//         font-size: 24px
+
+//     .top-bar
+//         .status
+//             .signal
+//                 width: 15px
+//                 height: 8px
+//             .mts
+//                 font-size: 12px
+
+//             .wifi
+//                 width: 15px
+//                 height: 15px
+
+//         .clock
+//             font-size: 12px
+
+//         .battery
+//             &-text
+//                 font-size: 12px
+
+//             &-logo
+//                 img
+//                     width: 32px
+//                     height: 42px
+//                     padding-bottom: 21px
+
+// @media (max-width: 380px)
+//     .CalcButton
+//         height: 55px
+
+/** 
+ ТУТ БУДУТ ОТДЕЛЬНЫЕ СТИЛИ ДЛЯ ПАПАПА ОНИ СЧИТАЮТСЯ ПО ОБЩЕЙ ВЫСОТЕ
+
+            .fancybox-content
+                height: 650px !important
+                overflow: hidden **/
