--- a/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
+++ b/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
@@ -1,12 +1,8 @@
-.bodyforapps
-    background: black
-    user-select: none
-
 .calculator-on-iPhone-JS
     overflow: hidden
     background: black
     color: white
-    position: relative
+    user-select: none
 
 .status
     display: flex
@@ -180,6 +176,10 @@
                         font-size: 20px
 
 @media (max-width: 300px)
+    .calculator-on-iPhone-JS
+        height: 450px
+        overflow: hidden
+
     .top-bar
         height: 70px
 
@@ -202,92 +202,3 @@
                 &.number-0
                     width: 100px
                     padding-left: 18px
-
-//     @media (max-width: 641px)
-//     .calculator-on-iPhone-JS
-//         height: 100%
-//         width: 100%
-
-// @media (max-width: 530px)
-//     .calculator-on-iPhone-JS
-//         overflow: hidden
-
-//     .fancybox-slide
-//         height: 680px
-//         overflow: hidden
-
-//     .CalcButton.number-0
-//         width: 172px
-
-//     .CalcButton
-//         font-size: 30px
-
-//     .value
-//         margin-top: 20px
-//         font-size: 50px !important
-
-//     .CalcButton
-//         width: 70px
-//         height: 70px
-//         font-size: 50px
-
-// @media (max-width: 500px)
-//     .CalcButton
-//         height: 70px
-//         width: 70px
-//         font-size: 30px
-
-// @media (max-width: 470px)
-//     .fancybox-slide
-//         max-height: 640px
-//         overflow: hidden
-
-// @media (max-width: 450px)
-
-//     .calculator-on-iPhone-JS
-
-//         .top-bar
-//             height: 40px
-
-//             .value
-//                 font-size: 40px
-
-// @media (max-width: 390px)
-//     .CalcButton
-//         font-size: 24px
-
-//     .top-bar
-//         .status
-//             .signal
-//                 width: 15px
-//                 height: 8px
-//             .mts
-//                 font-size: 12px
-
-//             .wifi
-//                 width: 15px
-//                 height: 15px
-
-//         .clock
-//             font-size: 12px
-
-//         .battery
-//             &-text
-//                 font-size: 12px
-
-//             &-logo
-//                 img
-//                     width: 32px
-//                     height: 42px
-//                     padding-bottom: 21px
-
-// @media (max-width: 380px)
-//     .CalcButton
-//         height: 55px
-
-/** 
- ТУТ БУДУТ ОТДЕЛЬНЫЕ СТИЛИ ДЛЯ ПАПАПА ОНИ СЧИТАЮТСЯ ПО ОБЩЕЙ ВЫСОТЕ
-
-            .fancybox-content
-                height: 650px !important
-                overflow: hidden **/
