--- a/figma/SOS/sass/backgrounds.sass
+++ b/figma/SOS/sass/backgrounds.sass
@@ -8,7 +8,7 @@
     top: 0
     z-index: -10
     background-repeat: no-repeat
-    background-image: url(../figma/SOS/img/background/bg-image-1-min.jpg)
+    background-color: black
     background-size: cover
     transition: 1s
 
