--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -139,6 +139,7 @@
     margin-top: 28.55px
     width: 260.36px
     height: 60px
+    transition: 0.5s
     background: linear-gradient(194.68deg, #FFB548 11.27%, #F3AF34 90.4%)
     border-radius: 4px
     cursor: pointer
