--- a/figma/Mediation/sass/Meditation-One.sass
+++ b/figma/Mediation/sass/Meditation-One.sass
@@ -103,23 +103,27 @@
         margin-top: 160px
 
 @media (max-width: 388px)
-    .Meditation-One__h1
-        font-size: 48px
-        line-height: 52px
+    .Meditation-One
+        height: 900px
+        &__h1
+            font-size: 48px
+            line-height: 52px
 
 @media (max-width: 331px)
-    .Meditation-One__h1
-        font-size: 36px
-        line-height: 42px
+    .Meditation-One
+        height: 800px
+        &__h1
+            font-size: 36px
+            line-height: 42px
 
-    .Meditation-One__under-text
-        line-height: 20px
-        font-size: 19px
+        &__under-text
+            line-height: 20px
+            font-size: 19px
 
-    .Meditation-One__Get-Start
-        width: 216px
-        height: 63px
+        &__Get-Start
+            width: 216px
+            height: 63px
 
 @media (max-width: 331px)
     .Meditation-One__Get-Start
-        margin-top: 175px
+        margin-top: 100px
