--- a/figma/Mediation/sass/Meditation-item.sass
+++ b/figma/Mediation/sass/Meditation-item.sass
@@ -46,6 +46,17 @@
                     width: 102px
                     height: 24px
 
+@media (max-width: 1500px)
+    .Meditation
+        &-wrapper
+            flex-direction: column
+
+        &-item
+            margin: 0 auto
+
+            &__wrapper
+                margin: 0 auto
+
 @media (max-width: 830px)
     .Meditation
         &-wrapper
