--- a/figma/Mediation/sass/Meditation-best.sass
+++ b/figma/Mediation/sass/Meditation-best.sass
@@ -188,7 +188,7 @@
 
 @media (max-width: 670px)
     .Meditation-best
-        height: 2000px
+        height: 1700px
 
         &-left
             width: 100%
@@ -199,6 +199,7 @@
         &-left__item
             margin: 20px
             width: auto
+            height: auto
 
             &-title
                 position: static
@@ -218,6 +219,7 @@
         &-right__item
             margin: 20px
             width: auto
+            height: auto
 
             &-title
                 position: static
