--- a/figma/Mediation/sass/Meditation-item.sass
+++ b/figma/Mediation/sass/Meditation-item.sass
@@ -73,7 +73,7 @@
             &__article
                 width: auto
                 height: auto
-                padding: 10px
+                padding: 20px 10px
                 margin: 10px 0
                 &-active
                     background-image: none
@@ -88,6 +88,13 @@
                     width: auto
                     height: auto
                     padding-left: 10px
+
+                &-arrow
+                    width: 102px
+                    height: 24px
+                    margin: 0 auto
+                    padding-top: 7px
+                    background-image: url(../figma/Mediation/img/Meditation-item-arrow.svg)
 
 @media (max-width: 740px)
     .Meditation-item__article-title
