--- a/sass/style.sass
+++ b/sass/style.sass
@@ -51,6 +51,8 @@
 @import "../figma/Mediation/sass/footer"
 @import "../figma/Mediation/sass/header"
 
+@import "../figma/Plants/sass/header"
+
 @import "../Andrusha/sass/catalog"
 @import "../Andrusha/sass/education"
 @import "../Andrusha/sass/person"
