--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -103,6 +103,7 @@
         display: flex
         flex-direction: column
         justify-content: center
+        width: 100%
 
         &-textUp
             margin-top: 15px
@@ -119,6 +120,7 @@
             padding: 10% 0
             padding: 9px
             text-align: center
+            width: 100%
 
         &-textUnder
             width: 100%
