--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -239,3 +239,11 @@
 
         &-text
             width: 90%
+
+@media (max-width: 600px)
+    .s5h1-main
+        color: rgba(255, 181, 72, 0.9) !important
+        width: 100% !important
+        color: rgba(255, 181, 72, 0.9) !important
+        font-size: 45px
+        margin-top: 0
