--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -161,12 +161,16 @@
     .s4-h1main
         font-size: 45px
 
+@media (max-width: 600px)
+    .s4-h1main
+        color: rgba(255, 181, 72, 0.9) !important
+        width: 100% !important
+        color: rgba(255, 181, 72, 0.9) !important
+        font-size: 45px
+
 @media (max-width: 560px)
     .s4-h1up
         padding-top: 40px
-
-    .s4-h1main
-        color: rgba(255, 181, 72, 0.9) !important
 
     .TableSOS-inner
         margin-top: 40px
@@ -222,8 +226,3 @@
 
     .line7
         display: none
-
-@media (max-width: 330px)
-    .s4-h1main
-        font-size: 30px
-        line-height: 30px
