--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -200,6 +200,13 @@
     .S3-h1main
         font-size: 70px
 
+@media (max-width: 600px)
+    .S3-h1main
+        margin-top: 0
+        width: 100% !important
+        color: rgba(255, 181, 72, 0.9) !important
+        font-size: 45px
+
 @media (max-width: 580px)
     .S3-h1up
         margin-left: 0
