--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -141,10 +141,10 @@
         height: 100%
     .SOS-S6-inner
         .SOS-s6-left
-            poasition: absolute
+
             img
                 max-height: 100%
-                max-weight: 100%
+                max-width: 100%
 
         .SOS-s6-right
             position: absolute
@@ -219,3 +219,10 @@
 
     .s6h1-text
         padding: 7px
+
+@media (max-width: 600px)
+    .s6h1-up
+        margin-top: 80px
+
+    .s6h1-main
+        margin-top: 0
