--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -63,9 +63,12 @@
         padding: 0
 
     &__photo img
-        height: 100%
+        height: auto
         width: 100%
         border-radius: 6px
+
+    .point-switcher__item
+        margin: 0 15px
 
     &__photo_1
         position: absolute
