--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -63,7 +63,7 @@
         padding: 0
 
     &__photo img
-        height: auto
+        height: 100%
         width: 100%
         border-radius: 6px
 
